Reference model and controller, etc
* Added feature for basic view of reader
* Added spec and model for Reference class
* Added controller and show view for Reference class
* Probably a bunch of other stuff too

Feature(s):
	- reader/logged_out
			Basic home page contents

Change-Id: I354b3f794b959260166cd88516a99d8925c7081d

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,20 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+# Boilerplate for now. Will fill in when necessary.
+common: &common
+  adapter: postgresql
+  username: yv_web
+  password: vt5igg1ycSYBEiP4Zg5p # from psql setup, see Postgresql
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+development:
+  <<: *common
+  database: yv_web_development
+
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: yv_web_test
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *common
+  database: yv_web_production
+
+cucumber:
+  <<: *test
