--- a/config/_config.yml
+++ b/config/_config.yml
@@ -3,6 +3,11 @@ development:
   api_version: "2.2"
   memcache_server: localhost
 
-test:
+test: &test
+  api_root: https://api.yvdev.com
+  api_version: "2.2"
+  memcache_server: localhost
 
 production:
+
+demo: *test
