Re-enable ActiveRecord
Change-Id: Iea8132d0570942674a780529ce06429cda45a13f

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,10 @@
 # Boilerplate for now. Will fill in when necessary.
 common: &common
   adapter: postgresql
+  host: localhost
+  port: 5432
   username: yv_web
-  password: vt5igg1ycSYBEiP4Zg5p # from psql setup, see Postgresql
+  # password: vt5igg1ycSYBEiP4Zg5p # from psql setup, see Postgresql
 
 development:
   <<: *common
