fixed YvApi bug
Change-Id: I0ad949b337a0ed168e68bb38333e0cf8f8fe121d

--- a/config/_config.yml
+++ b/config/_config.yml
@@ -1,10 +1,12 @@
 development:
-  api_root: https://api.yvdev.com
+  api_root: api.yvdev.com
+  api_referer: web.youversion.com
   api_version: "2.3"
   memcache_server: localhost
 
 test: &test
-  api_root: https://api.yvdev.com
+  api_root: api.yvdev.com
+  api_referer: web.youversion.com
   api_version: "2.3"
   memcache_server: localhost
 
