--- a/fixtures/vcr/cuke/cucumber_tags/no_user.yml
+++ b/fixtures/vcr/cuke/cucumber_tags/no_user.yml
@@ -83,3 +83,58 @@
     body: ! '{"response":{"code":403,"data":{"errors":[{"key":"users.hash.not_verified","error":"This
       account has not been verified."}]},"buildtime":"2011-10-06T21:43:42+00:00"}}'
     http_version: '1.1'
+- !ruby/struct:VCR::HTTPInteraction
+  request: !ruby/struct:VCR::Request
+    method: :post
+    uri: http://api.yvdev.com:80/2.3/users/create.json
+    body: email=cukeuser2%40youversion.com&username=cukeuser2&password=tenders&verified=false&agree=true&token=ad9d8885e1a9a51ee4d6b365a31b35be
+    headers:
+      referer:
+      - http://api.yvdev.com
+  response: !ruby/struct:VCR::Response
+    status: !ruby/struct:VCR::ResponseStatus
+      code: 301
+      message: Moved Permanently
+    headers:
+      server:
+      - nginx/0.7.67
+      date:
+      - Thu, 20 Oct 2011 22:07:00 GMT
+      content-type:
+      - text/html
+      content-length:
+      - '185'
+      connection:
+      - keep-alive
+      location:
+      - https://api.yvdev.com/2.3/users/create.json
+    body: ! "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n<body
+      bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\n<hr><center>nginx/0.7.67</center>\r\n</body>\r\n</html>\r\n"
+    http_version: '1.1'
+- !ruby/struct:VCR::HTTPInteraction
+  request: !ruby/struct:VCR::Request
+    method: :get
+    uri: https://api.yvdev.com:443/2.3/users/create.json
+    body: email=cukeuser2%40youversion.com&username=cukeuser2&password=tenders&verified=false&agree=true&token=ad9d8885e1a9a51ee4d6b365a31b35be
+    headers:
+      referer:
+      - http://api.yvdev.com
+  response: !ruby/struct:VCR::Response
+    status: !ruby/struct:VCR::ResponseStatus
+      code: 200
+      message: OK
+    headers:
+      server:
+      - nginx/0.7.67
+      date:
+      - Thu, 20 Oct 2011 22:07:00 GMT
+      content-type:
+      - text/plain; charset=utf-8
+      transfer-encoding:
+      - chunked
+      connection:
+      - keep-alive
+      vary:
+      - Accept-Encoding
+    body: ! '{"response":{"code":403,"data":"Forbidden","buildtime":"2011-10-20T22:07:00+00:00"}}'
+    http_version: '1.1'
