--- a/fixtures/vcr/rspec/user.yml
+++ b/fixtures/vcr/rspec/user.yml
@@ -6,7 +6,7 @@
     body: email=testuser%40youversion.com&username=testuser&password=tenders&verified=true&agree=true&token=615ad51b71049e299842f5af14c70cad
     headers:
       referer:
-      - https://api.yvdev.com
+      - http://web.youversion.com
   response: !ruby/struct:VCR::Response
     status: !ruby/struct:VCR::ResponseStatus
       code: 200
@@ -15,7 +15,7 @@
       server:
       - nginx/0.7.67
       date:
-      - Fri, 07 Oct 2011 15:46:52 GMT
+      - Fri, 21 Oct 2011 13:26:48 GMT
       content-type:
       - text/plain
       - text/plain; charset=utf-8
@@ -25,7 +25,7 @@
       - keep-alive
       vary:
       - Accept-Encoding
-    body: ! '{"response":{"code":201,"data":"Created","buildtime":"2011-10-07T15:46:52+00:00"}}'
+    body: ! '{"response":{"code":201,"data":"Created","buildtime":"2011-10-21T13:26:48+00:00"}}'
     http_version: '1.1'
 - !ruby/struct:VCR::HTTPInteraction
   request: !ruby/struct:VCR::Request
@@ -34,7 +34,7 @@
     body: email=blah%40stuff.com&username=&password=&verified=false&agree=false&token=61e67a748a66c5acd12f162b31fcec4d
     headers:
       referer:
-      - https://api.yvdev.com
+      - http://web.youversion.com
   response: !ruby/struct:VCR::Response
     status: !ruby/struct:VCR::ResponseStatus
       code: 200
@@ -43,7 +43,7 @@
       server:
       - nginx/0.7.67
       date:
-      - Fri, 07 Oct 2011 15:46:52 GMT
+      - Fri, 21 Oct 2011 13:26:48 GMT
       content-type:
       - text/plain
       - text/plain; charset=utf-8
@@ -55,44 +55,16 @@
       - Accept-Encoding
     body: ! '{"response":{"code":400,"data":{"errors":[{"key":"users.username.required","error":"Username
       is required"},{"key":"users.password.required","error":"Password is required"},{"key":"users.agree.not_true","error":"Agreement
-      with the terms of use and privacy statement is required"}]},"buildtime":"2011-10-07T15:46:52+00:00"}}'
+      with the terms of use and privacy statement is required"}]},"buildtime":"2011-10-21T13:26:48+00:00"}}'
     http_version: '1.1'
 - !ruby/struct:VCR::HTTPInteraction
   request: !ruby/struct:VCR::Request
     method: :get
-    uri: https://testuser:tenders@api.yvdev.com:443/2.3/users/authenticate.json?
+    uri: http://testuser:tenders@api.yvdev.com:80/2.3/users/authenticate.json?
     body: !!null 
     headers:
       referer:
-      - https://api.yvdev.com
-  response: !ruby/struct:VCR::Response
-    status: !ruby/struct:VCR::ResponseStatus
-      code: 301
-      message: Moved Permanently
-    headers:
-      server:
-      - nginx/0.7.67
-      date:
-      - Fri, 07 Oct 2011 15:46:52 GMT
-      content-type:
-      - text/html
-      content-length:
-      - '185'
-      connection:
-      - keep-alive
-      location:
-      - http://api.yvdev.com/2.3/users/authenticate.json
-    body: ! "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n<body
-      bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\n<hr><center>nginx/0.7.67</center>\r\n</body>\r\n</html>\r\n"
-    http_version: '1.1'
-- !ruby/struct:VCR::HTTPInteraction
-  request: !ruby/struct:VCR::Request
-    method: :get
-    uri: http://testuser:tenders@api.yvdev.com:80/2.3/users/authenticate.json
-    body: !!null 
-    headers:
-      referer:
-      - https://api.yvdev.com
+      - http://web.youversion.com
   response: !ruby/struct:VCR::Response
     status: !ruby/struct:VCR::ResponseStatus
       code: 200
@@ -101,7 +73,7 @@
       server:
       - nginx/0.7.67
       date:
-      - Fri, 07 Oct 2011 15:46:52 GMT
+      - Fri, 21 Oct 2011 13:26:48 GMT
       content-type:
       - text/plain; charset=utf-8
       transfer-encoding:
@@ -110,45 +82,17 @@
       - keep-alive
       vary:
       - Accept-Encoding
-    body: ! '{"response":{"code":200,"data":{"id":"4163157","username":"testuser","user_avatar_url":{"px_24x24":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_24x24.png","px_48x48":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_48x48.png","px_128x128":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_128x128.png","px_512x512":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_512x512.png"},"name":null,"first_name":null,"last_name":null,"location":null,"im_type":null,"im_value":null,"website":null,"mobile":null,"postal_code":null,"language":"false","country":"  ","timezone":"UTC","created":"2011-10-07
-      15:46:51.607149+00","last_login":"2011-10-07 15:46:52+00","twitter":null,"facebook":null,"email":"testuser@youversion.com","notice_contrib_fav":"true","notice_follower":"true","notice_newsletter":"true","notice_badges":"true","notice_reading_plans":"true"},"buildtime":"2011-10-07T15:46:52+00:00"}}'
+    body: ! '{"response":{"code":200,"data":{"id":"4163177","username":"testuser","user_avatar_url":{"px_24x24":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_24x24.png","px_48x48":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_48x48.png","px_128x128":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_128x128.png","px_512x512":"http:\/\/avatars.youversion.com\/5d9c68c6c50ed3d02a2fcf54f63993b6_512x512.png"},"name":null,"first_name":null,"last_name":null,"location":null,"im_type":null,"im_value":null,"website":null,"mobile":null,"postal_code":null,"language":"false","country":"  ","timezone":"UTC","created":"2011-10-21
+      13:26:48.226265+00","last_login":"2011-10-21 13:26:48+00","twitter":null,"facebook":null,"email":"testuser@youversion.com","notice_badges":"true","notice_contrib_fav":"true","notice_follower":"true","notice_newsletter":"false","notice_reading_plans":"true"},"buildtime":"2011-10-21T13:26:48+00:00"}}'
     http_version: '1.1'
 - !ruby/struct:VCR::HTTPInteraction
   request: !ruby/struct:VCR::Request
     method: :get
-    uri: https://testuser:asdf@api.yvdev.com:443/2.3/users/authenticate.json?
+    uri: http://testuser:asdf@api.yvdev.com:80/2.3/users/authenticate.json?
     body: !!null 
     headers:
       referer:
-      - https://api.yvdev.com
-  response: !ruby/struct:VCR::Response
-    status: !ruby/struct:VCR::ResponseStatus
-      code: 301
-      message: Moved Permanently
-    headers:
-      server:
-      - nginx/0.7.67
-      date:
-      - Fri, 07 Oct 2011 15:46:53 GMT
-      content-type:
-      - text/html
-      content-length:
-      - '185'
-      connection:
-      - keep-alive
-      location:
-      - http://api.yvdev.com/2.3/users/authenticate.json
-    body: ! "<html>\r\n<head><title>301 Moved Permanently</title></head>\r\n<body
-      bgcolor=\"white\">\r\n<center><h1>301 Moved Permanently</h1></center>\r\n<hr><center>nginx/0.7.67</center>\r\n</body>\r\n</html>\r\n"
-    http_version: '1.1'
-- !ruby/struct:VCR::HTTPInteraction
-  request: !ruby/struct:VCR::Request
-    method: :get
-    uri: http://testuser:asdf@api.yvdev.com:80/2.3/users/authenticate.json
-    body: !!null 
-    headers:
-      referer:
-      - https://api.yvdev.com
+      - http://web.youversion.com
   response: !ruby/struct:VCR::Response
     status: !ruby/struct:VCR::ResponseStatus
       code: 200
@@ -157,7 +101,7 @@
       server:
       - nginx/0.7.67
       date:
-      - Fri, 07 Oct 2011 15:46:53 GMT
+      - Fri, 21 Oct 2011 13:26:48 GMT
       content-type:
       - text/plain; charset=utf-8
       transfer-encoding:
@@ -167,5 +111,5 @@
       vary:
       - Accept-Encoding
     body: ! '{"response":{"code":403,"data":{"errors":[{"key":"users.username_or_password.invalid","error":"Username
-      or password is invalid"}]},"buildtime":"2011-10-07T15:46:53+00:00"}}'
+      or password is invalid"}]},"buildtime":"2011-10-21T13:26:48+00:00"}}'
     http_version: '1.1'
