--- a/fixtures/vcr/cuke/cucumber_tags/no_user.yml
+++ b/fixtures/vcr/cuke/cucumber_tags/no_user.yml
@@ -138,3 +138,31 @@
       - Accept-Encoding
     body: ! '{"response":{"code":403,"data":"Forbidden","buildtime":"2011-10-20T22:07:00+00:00"}}'
     http_version: '1.1'
+- !ruby/struct:VCR::HTTPInteraction
+  request: !ruby/struct:VCR::Request
+    method: :get
+    uri: http://cukeuser2:tenders@api.yvdev.com:80/2.3/users/authenticate.json?
+    body: !!null 
+    headers:
+      referer:
+      - http://web.youversion.com
+  response: !ruby/struct:VCR::Response
+    status: !ruby/struct:VCR::ResponseStatus
+      code: 200
+      message: OK
+    headers:
+      server:
+      - nginx/0.7.67
+      date:
+      - Mon, 24 Oct 2011 18:09:28 GMT
+      content-type:
+      - text/plain; charset=utf-8
+      transfer-encoding:
+      - chunked
+      connection:
+      - keep-alive
+      vary:
+      - Accept-Encoding
+    body: ! '{"response":{"code":403,"data":{"errors":[{"key":"users.hash.not_verified","error":"This
+      account has not been verified."}]},"buildtime":"2011-10-24T18:09:28+00:00"}}'
+    http_version: '1.1'
